[feat] #34 사용 신청 승인 시 uid, gid 할당